# process_cv_ofline

./: .env.example  README.md  pyproject.toml
backend/: config.py  corp_embeddings.py  embeddings.py  engine_client.py  file_processor.py  generative_engine_client.py  requirements.txt  summarizer.py  summary_service.py  vector_store.py
frontend/: app.py
